2007-09-18  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-main-win.cc:
	* src/gnome-cmd-user-actions.cc:
	* src/gnome-cmd-user-actions.h:
	Added "view.home" and "view.root" actions

	* src/gnome-cmd-user-actions.cc:
	Added support for key shortcuts to defined bookmarks

2007-09-17  Piotr Eljasiak  <epiotr@use.pl>

	* src/utils.cc:
	* src/utils.h:
	Added split() function

2007-09-16  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-file-selector.cc:
	* src/gnome-cmd-file-selector.h:
	* src/gnome-cmd-user-actions.cc:
	* src/gnome-cmd-user-actions.h:
	Added CTRL+LEFT/RIGHT shortcuts to copy the cwd from the active filelist to
	the inactive one

2007-09-14  Piotr Eljasiak  <epiotr@use.pl>

	* src/*.h:
	* src/tags/*.h:
	Get rid of G_BEGIN_DECLS and G_END_DECLS

2007-09-13  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-file-popmenu.cc:
	* src/gnome-cmd-main-win.cc:
	* src/gnome-cmd-user-actions.cc:
	* src/gnome-cmd-user-actions.h:
	Send files via email or instant messenger (using nautilus-sendto)

2007-09-13  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-con-ftp.cc:
	* src/gnome-cmd-con-home.cc:
	* src/gnome-cmd-con-smb.cc:
	* src/gnome-cmd-pixmap.cc:
	* src/gnome-cmd-pixmap.h:
	Use default GNOME theme icons for home, SMB and FTP locations

2007-09-12  Mike Crash <mike@mikecrash.com>

	* src/gnome-cmd-con-device.cc:
	* src/gnome-cmd-data.cc:
	* src/gnome-cmd-data.h:
	* src/gnome-cmd-pixmap.cc:
	* src/gnome-cmd-pixmap.h:
	Fixed problem #434545 (Debian bug #421480: HUGE icons for device icons)

2007-09-12  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-advrename-dialog.cc:
	* src/gnome-cmd-data.cc:
	* src/gnome-cmd-ftp-dialog.cc:
	* src/utils.cc:
	* src/utils.h:
	* src/libgviewer/viewer-window.c:
	* src/tags/gnome-cmd-tags-doc.cc:
	* src/tags/gnome-cmd-tags-exiv2.cc:
	* src/tags/gnome-cmd-tags.cc:
	Replaced ARRAY_ELEMENTS with glib G_N_ELEMENTS macro

2007-09-12  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-advrename-dialog.cc: