@@ -23,6 +23,7 @@ New features:
  * New key bindings:
       CTRL+LEFT/RIGHT Copying the current working directory from the active
                       filelist to the inactive one
+      CTRL+N          Open new connection to remote server (replaces the old CTRL+G)
 
 
 ===================================
